# dependent-types

./: README.md  dependent-types.cabal  fourmolu.yaml
.github/workflows/: build.yml
docs/: grammar
examples/: Proof  Vec  sort
src/: Main.hs  Parse.hs  Pretty.hs  Syntax.hs  Util.hs
src/Compile/: Compile.hs  Core.hs
src/Infer/: Error.hs  Eval.hs  Infer.hs  Quote.hs  Unify.hs  Value.hs
src/Parse/: Layout.hs  Lex.hs  Parse.hs  Pretty.hs  Stream.hs
stdlib/: 1.Bool  2.Nat  3.Maybe  4.List
tests/: Arbitrary.hs  Deannotate.hs  Main.hs  ParseTests.hs
tests/Infer/: app  case  common  literals  pi  type-is-type
tests/Parse/: Term.hs
tests/Test/: Compile.hs  Eval.hs  Infer.hs  Parse.hs
