cabal-version:      2.4
name:               dependent-types
version:            0.1.0.0

common all
    build-depends:      base ^>=4.17.2.0,
                        text,
                        recursion-schemes,
                        comonad,
                        free,
                        megaparsec,
                        parser-combinators,
                        prettyprinter,
                        mtl,
                        containers,
    default-language:   GHC2021
    other-modules:      Syntax, Pretty, Parse
    default-extensions: LambdaCase,
                        OverloadedStrings,
                        BlockArguments
    ghc-options:        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wno-orphans

executable dependent-types
    import:             all
    main-is:            Main.hs
    hs-source-dirs:     src

test-suite tests
    import:             all
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Arbitrary, Parse, Parse.Term
    hs-source-dirs:     tests, src
    build-depends:      tasty ^>=1.5,
                        tasty-quickcheck,
                        tasty-hunit,
                        random,
                        generic-random,
